side bar and logo up

--- a/angular.json
+++ b/angular.json
@@ -83,14 +83,14 @@
             "karmaConfig": "karma.conf.js",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "../node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/popper.js/dist/umd/popper.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./node_modules/chartjs/chart.js"
+              "../node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "../node_modules/popper.js/dist/umd/popper.min.js",
+              "../node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "../node_modules/chartjs/chart.js"
             ]
           }
         },
