--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,16 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
-            "scripts": []
+            "styles": [
+              "src/styles.scss",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+            ],
+            "scripts": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/popper.js/dist/umd/popper.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./node_modules/chartjs/chart.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -82,16 +90,8 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "../node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.scss"
-            ],
-            "scripts": [
-              "../node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "../node_modules/popper.js/dist/umd/popper.min.js",
-              "../node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "../node_modules/chartjs/chart.js"
-            ]
+            "styles": ["src/styles.scss"],
+            "scripts": []
           }
         },
         "lint": {
