--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.6.0",
     "chartjs": "^0.3.24",
     "jquery": "^3.5.1",
+    "ng2-charts": "^2.4.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
